# dc-powervr-sandbox

./: .gitattributes  .gitignore  .gitpod.yml  CMakeLists.txt  LICENSE  make_and_run.sh
romdisk/: bricks.kmg  bumpmap.raw  light.kmg
scratchpad/: lighting.cpp  main.cpp  quaternion.cpp
src/: Makefile  Makefile.pc.mk  custom_types.h  debug.cpp  debug.h  main.c  main.cpp
src/components/: actor.cpp  actor.h  light.h  sprite.h
src/game/: game.c  game.cpp  game.h
src/platform/: common.h  dreamcast.cpp  dreamcast.h  pc.cpp  pc.h  platform.cpp  platform.h  platform_dc.cpp  platform_dc.h  platform_pc.cpp  platform_pc.h
src/renderer/: renderer.cpp  renderer.h  renderer_dc.cpp  renderer_dc.h
src/scene/: scene.h
src/unim/: core.c  core.cpp  core.h  platforms.h  render.h  types.h  unim.h
toolchain/: Dreamcast.cmake
